worked on responsive styles and updated logoff function

--- a/public/index.html
+++ b/public/index.html
@@ -59,14 +59,11 @@
 				<div class="directions" id="directionsForm">
 					<button class ="close-form" type="submit" onclick="directionsOff()"><i class="fas fa-times"></i></button>
 					<ul class="flex-outer">
-						<p class="form-title">Here's How To Use JusKidin</p>
+						<p class="form-title">How To Use JusKidin</p>
 							<p class="directions-heading">Web Resources for Your Children</p>
-							<li class= "directions-item">Simple use the "Add Child" form to enter a name and birthdate for each child.</li>
-							<li class= "directions-item">Visit the Child(ren) page, click on the child to see developmentally relevant web resources.</li>
+							<p class= "directions-item">Parents have lots of questions on how to best support their growing children. Simply use the "Add Child" form to enter a name and birthdate for each child. Visit the Child(ren) page, click on the child to access developmentally relevant web resources.</p>
 							<p class="directions-heading">Organize Memories, School Work, Artwork into Drawers</p>
-							<li class= "directions-item">Use the "Connect Image" form to bring the image into the website and place it into a drawer.</li>
-							<li class= "directions-item">Think of drawers as topics and containers. They are simply an organization tool for your images.</li>
-							<li class= "directions-item">Go to the Drawers page, click on the drawer button to view all the connected images.</li>
+							<p class= "directions-item">Think of drawers as topics and containers. They are simply an organization tool for your images or digitized versions of your children's work, activities and creations. Go to the Drawers page, click on the drawer button to upload images and add notes.</p>
 							<p class="form-title">Enjoy!</p>
 					</ul>
 				</div>
