--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 					</div>
 			</div>
 			<div class="dropdown">
-				<a class="dropbtn" href="gsearch.html">Child(ren)  <i class="fas fa-angle-down"></i></a>
+				<a class="dropbtn">Child(ren)  <i class="fas fa-angle-down"></i></a>
 					<div class="dropdown-content child-dropbtn">
 						<a onclick="childOn()" href="javascript:void(0)"><i class="fas fa-plus"></i> New Child</a>
 					</div>
