updated mobile styles

--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
 					</div>
 			</div>
 			<div class="dropdown">
-				<a class="dropbtn" href="assets.html">Drawers  <i class="fas fa-angle-down"></i></a>
+				<a class="dropbtn">Drawers  <i class="fas fa-angle-down"></i></a>
 					<div class="dropdown-content asset-dropbtn">
 						<a onclick="assetOn()" href="#connectimage"><i class="fas fa-upload"></i> Upload Item</a>
 					</div>
@@ -42,8 +42,8 @@
 			<header role="banner">
 				<h1>JusKidin</h1>
 				<div id="home-title">
-					<h2>Support your children.  Keep all the memories.</h2>
-					<p class="homepage-text">Create profiles for each of your children. Connect to relevant web resources based on your child's age. </br> Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
+					<h2 class="homepage-title">Support your children.  Keep all the memories.</h2>
+					<p class="homepage-text">Create profiles for each of your children. Connect to relevant web resources based on your child's age. Upload pictures you take of your child's artwork, schoolwork, sporting events and other special memories.</p>
 					<button onclick="directionsOn()" class="heres-how">Here's How</button>
 				</div>
 			</header>
@@ -248,7 +248,7 @@
 						<button class ="close-drawer" type="submit" onclick="drawerDisplayOff(), headerOn(), photosOn()"><i class="fas fa-times"></i></button>
 					<div class="tab dropdown-asset">
 						<div id="assetDropdown" class="dropdown-editAsset"></div>
-.							<h2>Create and use drawers to organize digital versions of your children's work, activities and art.</h2>
+							<h2 class="asset-heading">Create and use drawers to organize digital versions of your children's work, activities and art.</h2>
 						<div id="Drawer1" class="assettabcontent"></div>
 					</div>
 				</section>
