working on styles, edit/delete account functionality, create account/login flow

--- a/public/index.html
+++ b/public/index.html
@@ -52,7 +52,7 @@
 				<div class="directions" id="directionsForm">
 					<button class ="close-form" type="submit" onclick="directionsOff()"><i class="fas fa-times"></i></button>
 					<ul class="flex-outer">
-						<p class="form-title">How To Use JusKidin</p>
+						<p class="directions-title">How To Use JusKidin</p>
 							<p class="directions-heading">Web Resources for Your Children</p>
 							<p class= "directions-item">Parents have lots of questions on how to best support their growing children. Simply use the "Add Child" form to enter a name and birthdate for each child. Visit the Child(ren) page, click on the child to access developmentally relevant web resources.</p>
 							<p class="directions-heading">Organize Memories, School Work, Artwork into Drawers</p>
