--- a/public/index.html
+++ b/public/index.html
@@ -162,28 +162,28 @@
 			<div id="assetoverlay">
 				<div class="uploadAsset" id="uploadAssetForm">
 					<button class ="close-form" type="submit" onclick="assetOff()"><i class="fas fa-times"></i></button>
-					<form class="upload-image-form">
+					<form class="upload-image-form" method="post" enctype="multipart/form-data" action="/upload">
 						<ul class="flex-outer">
 							<p class="form-title">Connect File</p>
 							<li>
 								<label for="title">Title</label>
-								<input type="text" id="title" defaultValue="Title">
+								<input type="text" id="title" value="Enter a title for the image">
 							</li>
-							<li>
+							<!-- <li>
 								<label for="date-uploaded">Today's Date</label>
 								<input type="text" id="date-uploaded" defaultValue="mm/dd/yyyy">
-							</li>
+							</li> -->
 							<li>
 								<label for="notes">Notes</label>
-								<input type="text" id="notes" defaultValue="Notes">
+								<input type="text" id="notes" value="Write a short description.">
 							</li>
 							<li>
 								<label for="drawer-title">Add To Drawer</label>
-								<input type="text" id="drawer-title" class="drawer-title" defaultValue="Enter existing or new drawer name">
+								<input type="text" id="drawer-title" class="drawer-title" Value="Enter existing or new drawer name">
 							</li>
 							<li>
 								<label for="image-url">Image File</label>
-								<input type="text" id="image-url" defaultValue="http://imageurl.jpg">
+								<input type="file" id="image-url" value="http://imageurl.jpg">
 							</li>
 							<li>
 							<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
@@ -214,7 +214,7 @@
 				<section class="gsearch-section">
 					<div id="GsearchResults" class="displayTabcontent">
 						<button class ="close-gsearch" type="submit" onclick="gsearchOff(), headerOn(), photosOn()"><i class="fas fa-times"></i></button>
-						<button class ="close-gsearch" type="submit" onclick="updateChildOn()"><i class="fas fa-pencil-alt"></i></button>
+						<button class ="close-gsearch" type="submit" onclick="updateChildOn(), getAndDisplayCurrentChildInfo()"><i class="fas fa-pencil-alt"></i></button>
 						<h2 class="gsearch-heading">Discover relevant child development resources for each child.</h2>
 					</div>
 				</section>
