updated PUT for images and mobile styling

--- a/public/index.html
+++ b/public/index.html
@@ -33,7 +33,7 @@
 			<div class="dropdown">
 				<a class="dropbtn">Drawers  <i class="fas fa-angle-down"></i></a>
 					<div class="dropdown-content asset-dropbtn">
-						<a onclick="assetOn()" href="#connectimage"><i class="fas fa-upload"></i> Upload Item</a>
+						<a onclick="assetOn()" href="#connectimage"><i class="fas fa-link"></i> Connect Image</a>
 					</div>
 			</div>
 		</div>
@@ -162,9 +162,9 @@
 			<div id="assetoverlay">
 				<div class="uploadAsset" id="uploadAssetForm">
 					<button class ="close-form" type="submit" onclick="assetOff()"><i class="fas fa-times"></i></button>
-					<form class="upload-image-form" method="post" enctype="multipart/form-data" action="/upload">
+					<form id="upload-image-form" method="POST" enctype="multipart/form-data" action="/">
 						<ul class="flex-outer">
-							<p class="form-title">Upload Image</p>
+							<p class="form-title">Connect Image</p>
 							<li>
 								<label for="title">Title</label>
 								<input type="text" id="title" value="Enter a title for the image">
@@ -175,17 +175,23 @@
 							</li>
 							<li>
 								<label for="drawer-title">Add To Drawer</label>
-								<input type="text" id="drawer-title" class="drawer-title" Value="Enter existing or new drawer name">
+								<input type="text" id="drawer-title" class="drawer-title" Value="Use an existing or create a new drawer.">
 							</li>
 							<li>
-								<label for="image-url">Image File</label>
-								<input type="file" id="image-url">
+								<label for="image-url">Image URL</label>
+								<input type="text" id="image-url" name="image-url" Value="http://image.com">
 							</li>
 							<li>
-							<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Upload</button>
+							<button id="assetoverlaybutton" type="submit" onclick="assetOff()">Connect</button>
 							</li>
 						</ul>
 					</form>
+				</div>
+			</div>
+		</section>
+		<section role="region">
+			<div id="update-uploadoverlay">
+				<div class="updateUpload" id="updateUploadForm">	
 				</div>
 			</div>
 		</section>
