updated edit account link

--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 				<a id ="navAccountName" onclick="newAccountOn()" href="javascript:void(0)" class="dropbtn" href="#account"><i class="fas fa-user"></i> Account</a>
 					<div class="dropdown-content">
 						<a class="logoff-link"><i class="fas fa-sign-out-alt"></i> Logoff</a>
-						<a onclick="updateAccountOn()" href="javascript:void(0)"><i class="fas fa-edit"></i> Edit Account</a>
+						<a onclick="updateAccountOn()" href="javascript:void(0)"><i class="fas fa-pencil-alt"></i> Edit Account</a>
 					</div>
 			</div>
 			<div class="dropdown">
